# QuadTree

./: .gitignore  CMakeLists.txt
src/: Collisions.cpp  Collisions.hpp  ElementInfo.cpp  ElementInfo.hpp  FreeList.hpp  PolygonTypes.cpp  PolygonTypes.hpp  PopulationTypes.cpp  PopulationTypes.hpp  QuadNode.cpp  QuadNode.hpp  QuadTree.cpp  QuadTree.hpp  Quadrant.cpp  Quadrant.hpp  Rect.cpp  Rect.hpp  Utils.cpp  Utils.hpp  World.cpp  World.hpp
src/PolygonTypes/: APolygon.cpp  APolygon.hpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp
tests/: BasicTests.cpp  Catch2Main.cpp  Collisions.hpp  CollisionsTests.cpp  FreeListTests.cpp  FreeListtests.cpp  Point.cpp  Point.hpp  QuadTreeRectTests.cpp  Rect.cpp  Rect.hpp  TestsUtils.hpp  UtilsFunctionTests.cpp  main.cpp
tests/ressources/: datacreator.js
